@@ -273,7 +273,7 @@ class WC_Payments {
 
 			if ( WC_Payments_Features::is_grouped_settings_enabled() ) {
 				include_once __DIR__ . '/admin/class-wc-payments-admin-sections-overwrite.php';
-				new WC_Payments_Admin_Sections_Overwrite();
+				new WC_Payments_Admin_Sections_Overwrite( self::get_account_service() );
 
 				include_once __DIR__ . '/admin/class-wc-payments-admin-additional-methods-setup.php';
 				new WC_Payments_Admin_Additional_Methods_Setup( self::$card_gateway );
