@@ -3,6 +3,7 @@
 = 2.7.0 - 2021-xx-xx =
 * Add - Add a link to the snackbar notice that appears after submitting or saving evidence for a dispute challenge.
 * Fix - WooCommerce Payments admin pages redirect to the onboarding page when the WooCommerce Payments account is disconnected.
+* Fix - Do not overwrite admin pages when account is disconnected.
 * Update - Set a description when creating payment intents.
 
 = 2.6.1 - 2021-07-01 =
